--- a/public/style.css
+++ b/public/style.css
@@ -12,7 +12,7 @@ body {
   /* 9. Add 15px padding */
   padding: 15px;
   /* 10. Make the background color of the container Carolina Blue using the hex code defined here: https://en.wikipedia.org/wiki/Carolina_blue*/
-  background:  #4B9CD3;
+  background-color:  #4B9CD3;
 }
 
 input[type=text], input[type=password] {
@@ -41,6 +41,7 @@ hr {
   /* 14. Override default hr style with a 30-pixel bottom margin */
   margin-bottom: 30px;
   /* 15. Add a 2-pixel solid azure border (look up the hex code). */
+  border-width: 2px;
   border-color: #0080FF;
 }
 
